# tauri-chat-app

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  host.rs  lib.rs  main.rs  utils.rs
src-tauri/src/utils/: error.rs  payload.rs
src/components/: avatar.tsx  chat-log.tsx
src/hooks/: use-tauri-listeners.ts
src/pages/: chat.tsx  connect-or-host.tsx
src/utils/: data-store.tsx
